--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "reactotron-react-js": "^3.0.2",
+    "reactotron-redux": "^3.1.0"
+  }
 }
