Code formatted with ESLint and Airbnb styleguide

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "eslint-config-airbnb": "^17.1.0",
     "reactotron-react-js": "^3.0.2",
     "reactotron-redux": "^3.1.0"
   }
