--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "proxy": "https://expenses-control-node.herokuapp.com/",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.0",
     "popper.js": "^1.15.0",
@@ -14,6 +15,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
+    "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
